--- a/index.html
+++ b/index.html
@@ -55,6 +55,12 @@
       
     </div>
   </section>
+
+  <!-- Footer -->
+  <footer>
+    <p>Copyright 2018</p>
+    <div>social icons</div>
+  </footer>
     
   </body>
   </html>
